[tool.poetry]
name = "cocktail-maker-api"
version = "0.1.0"
description = ""
authors = ["Fer Toasted <68973307+esponges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
anthropic = "^0.28.0"
python-dotenv = "^1.0.1"
pinecone-client = {extras = ["grpc"], version = "^4.1.1"}
openai = "^1.35.3"
psycopg = {extras = ["binary"], version = "^3.1.19"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
